# nlo-rk4ip-code

./: .gitignore  AGENTS.md  CMakeLists.txt  Doxyfile  README.md  README.md.orig  TODO  TODO.md  data_exploration.ipynb  graphing.py  pyproject.toml  setup.sh  test.py
benchmarks/: .gitignore  CMakeLists.txt  bench_runtime_breakdown.c  bench_solver_backend.c  bench_tensor_scaling.c  bench_tensor_scaling.h  tensor_scaling_plan.c  tensor_scaling_plan.h  vulkan_bench_context.c  vulkan_bench_context.h
benchmarks/python/: bench_runtime_callable.py
examples/: CMakeLists.txt  harmonic_oscillator.cpp  shg_example.cpp  spm_example.cpp
examples/c/: runtime_temporal_demo.c
examples/julia/: Manifest.toml  Project.toml  high_order_grin_soliton_rk4ip.jl  raman_scattering_rk4ip.jl  second_order_soliton_rk4ip.jl  tensor_dispersion_3d_rk4ip.jl
examples/julia/backend/: common.jl  metrics.jl  plotting.jl  reference.jl  storage.jl
examples/julia/src/: NLOLibExamples.jl
examples/matlab/: coupled_dispersion_nonlinearity_diffraction_rk4ip.m  grin_fiber_xy_rk4ip.m  linear_drift_rk4ip.m  mmtools_modal_vs_profile_grid_rk4ip.m  mmtools_tensor_scaling_for_python_benchmark.m  runtime_callable_operator_rk4ip.m  runtime_temporal_demo.m  second_order_soliton_rk4ip.m  setup_matlab_example_environment.m
examples/matlab/+backend/: angular_frequency_grid.m  centered_time_grid.m  default_simulation_options.m  make_exec_options.m  plot_3d_intensity_scatter_propagation.m  plot_final_intensity_comparison.m  plot_final_re_im_comparison.m  plot_intensity_colormap_vs_propagation.m  plot_total_error_over_propagation.m  propagate_with_fallback.m
examples/python/: .gitignore  conservation_checks_rk4ip.py  coupled_dispersion_nonlinearity_diffraction_rk4ip.py  fixed_step_soliton_convergence_rk4ip.py  grin_fiber_analytic_validations.py  grin_fiber_xy_rk4ip.py  grin_full_coupled_rk4ip.py  grin_soliton_potential_rk4ip.py  high_order_grin_soliton_rk4ip.py  linear_drift_rk4ip.py  raman_scattering_rk4ip.py  requirements.txt  runtime_callable_operator_rk4ip.py  runtime_temporal_demo.py  second_order_soliton_rk4ip.py  spm_dispersion_comparison_rk4ip.py  spm_rk4ip.py  sqlite_snapshot_chunking_demo.py  tensor_backend_scaling_nlolib_rk4ip.py  tensor_backend_scaling_rk4ip.py  tensor_dispersion_3d_rk4ip.py  two_mode_linear_beating_rk4ip.py
examples/python/backend/: __init__.py  app_base.py  cli.py  figures.mplstyle  metrics.py  plotting.py  reference.py  runner.py  spectral.py  storage.py
examples/python/grin/: __init__.py  coupled.py  fiber.py  models.py  soliton.py  validation.py
src/: CMakeLists.txt  nlo_equations.cu  nlo_progress.h  nlolib.c  nlolib.h  nlolib_matlab.h  rk45_cpu.cpp  rk45_gpu.cu
src/backend/: cuda_backend.cu  cuda_backend_internal.h  cuda_backend_stubs.c  nlo_complex.h  nlo_complex_layout.h  nlo_complex_simd.h  vector_backend.c  vector_backend.h  vector_backend_internal.h  vk_auto_context.c  vk_auto_context.h  vulkan_stubs.c
src/backend/vulkan/: nlo_complex_device.h  nlo_vk_shader_paths.h.in  vk_shader_paths.h.in
src/backend/vulkan/kernels/: complex_device.glslinc  double_math.glslinc  nlo_complex_add_inplace.comp  nlo_complex_affine_comb2_real.comp  nlo_complex_affine_comb3_real.comp  nlo_complex_affine_comb4_real.comp  nlo_complex_axis_centered_from_delta.comp  nlo_complex_axis_unshifted_from_delta.comp  nlo_complex_axpy_inplace_real.comp  nlo_complex_device.glslinc  nlo_complex_embedded_error_pair_real.comp  nlo_complex_exp_inplace.comp  nlo_complex_fill.comp  nlo_complex_lerp.comp  nlo_complex_magnitude_squared.comp  nlo_complex_math.glslinc  nlo_complex_mesh_from_axis_tfast_t.comp  nlo_complex_mesh_from_axis_tfast_x.comp  nlo_complex_mesh_from_axis_tfast_y.comp  nlo_complex_mul_inplace.comp  nlo_complex_real_pow_inplace.comp  nlo_complex_relative_error_reduce.comp  nlo_complex_scalar_mul_inplace.comp  nlo_complex_weighted_rms_reduce.comp  (+5 more)
src/core/: init.c  init.h  init_defaults.c  init_internal.h  init_limits.c  init_state_builder.c  sim_dimensions_internal.h  state.c  state.h  state_lifecycle.c  state_snapshots.c
src/fft/: CMakeLists.txt  fft.c  fft.h  fft_backend.h  nlo_complex.h  plan_fft.md
src/helpers/: nlo_helpers.cpp  nlo_helpers.h
src/io/: log_format.c  log_format.h  log_sink.c  log_sink.h  plan_io.md  propagate_log.c  propagate_log.h  snapshot_store.c  snapshot_store.h
src/numerics/: math_ops.c  math_ops.h  nlo_complex_simd.h  rk4_kernel.c  rk4_kernel.h  vector_backend.c  vector_backend.h  vector_ops.c  vector_ops.h  vk_backend_dispatch.c  vk_backend_internal.h  vk_backend_ops.c  vk_backend_phase.c  vk_backend_resources.c  vk_backend_transfer.c  vk_operator_jit.c  vk_vector_ops.c  vk_vector_ops.h
src/physics/: operator_program.c  operator_program.h  operator_program_compile.c  operator_program_execute.c  operator_program_jit.h  operators.c  operators.h  plan_physics.md
src/utility/: perf_profile.c  perf_profile.h  rk4_debug.c  rk4_debug.h  state_debug.c  state_debug.h
tests/: CMakeLists.txt  test_nlo.cpp  test_rk45.cpp
tests/core/: CMakeLists.txt  check_tensor_bench_dry_run.cmake  test_log_sink.c  test_perf_profile.c  test_state_alloc.c  test_tensor_bench_plan.c
tests/fft/: CMakeLists.txt  test_fft.c  test_nlo_complex.c
tests/julia/: CMakeLists.txt  test_example_storage_init.jl
tests/matlab/: CMakeLists.txt  run_matlab_tests.m  test_runtime_handle_parser.m
tests/numerics/: CMakeLists.txt  test_nlo_numerics.c  test_nlo_simd_wrapper.c  test_nlo_vector_backend.c  test_nlo_vector_backend_vulkan.c
tests/python/: CMakeLists.txt  test_bindings.py  test_linear_drift.py  test_python_api_smoke.py  test_python_example_metrics.py  test_python_example_oop_structure.py  test_python_example_spectral.py  test_python_grin_plot_validation.py  test_python_operator_regression.py  test_python_package_surface.py  test_python_perf_profile.py  test_python_reference_benchmarks.py  test_python_runtime_expr_translation.py  test_python_second_order_soliton_plot_cleanup.py  test_python_storage_chunking.py  test_python_tensor_backend_scaling_cleanup.py  test_runtime_operator_expr.py
(+97 files in other folders)
